sort.pancake.GatesPancake.scala.error
Compilation error:
GatesPancake:8: error: not found: value estSelectionne
    estSelectionne()
    ^